Fix spacing

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -265,6 +265,10 @@ a {
   padding-top: 20px;
 }
 
+.margin-top-xs {
+  margin-top: 7px;
+}
+
 .margin-top-sm {
   margin-top: 20px;
 }
